Documentation update; js redirect; some content changes

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <meta name="description" content="Paul Bialo's Personal Portfolio">
         <link type="text/css" rel="stylesheet" href="css/main.css">
         <link type="text/css" rel="stylesheet" href="css/slider.css">
-
+        <script src="js/detectmobilebrowser.js"></script>
 		<script src="js/jquery-1.9.0.min.js"></script>
     </head>
 
