--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link type="text/css" rel="stylesheet" href="css/main.css">
         <link type="text/css" rel="stylesheet" href="css/slider.css">
 
+        <script src="js/detectmobilebrowser.js"></script>
 		<script src="js/jquery-1.9.0.min.js"></script>
 
         <script src="http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js"></script>
