--- a/mobile.html
+++ b/mobile.html
@@ -19,6 +19,7 @@
         <link type="text/css" rel="stylesheet" href="css/main.css">
         <link type="text/css" rel="stylesheet" href="css/slider.css">
 
+
         <script src="https://s3.amazonaws.com/codiqa-cdn/jquery-1.7.2.min.js"></script>
         <script src="https://s3.amazonaws.com/codiqa-cdn/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
         <script src="http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js"></script>
@@ -31,9 +32,7 @@
         <!-- Home -->
         <div data-role="page" id="page1">
             <div data-theme="a" data-role="header">
-                <h3>
-                    Home
-                </h3>
+                <img src="img/logomobile.gif" alt="PB logo">  
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
@@ -108,9 +107,7 @@
         <!-- About -->
         <div data-role="page" id="page2">
             <div data-theme="a" data-role="header">
-                <h3>
-                    About
-                </h3>
+                <img src="img/logomobile.gif" alt="PB logo">  
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
@@ -166,9 +163,7 @@
         <!-- Projects -->
         <div data-role="page" id="page3">
             <div data-theme="a" data-role="header">
-                <h3>
-                    Projects
-                </h3>
+                <img src="img/logomobile.gif" alt="PB logo">
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
@@ -227,9 +222,7 @@
         <!-- Services -->
         <div data-role="page" id="page4">
             <div data-theme="a" data-role="header">
-                <h3>
-                    Services
-                </h3>
+                <img src="img/logomobile.gif" alt="PB logo">
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
@@ -296,9 +289,7 @@
         <!-- Contact -->
         <div data-role="page" id="page5">
             <div data-theme="a" data-role="header">
-                <h3>
-                    Contact
-                </h3>
+                <img src="img/logomobile.gif" alt="PB logo">
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
