--- a/mobile.html
+++ b/mobile.html
@@ -36,7 +36,7 @@
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
-                            <a href="#page1" data-transition="fade" data-theme="" data-icon="" class="ui-btn-active ui-state-persist">
+                            <a href="#page1" data-transition="fade" data-theme="" data-icon="home" class="ui-btn-active ui-state-persist">
                                 Home
                             </a>
                         </li>
@@ -111,7 +111,7 @@
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
-                            <a href="#page1" data-transition="fade" data-theme="" data-icon="">
+                            <a href="#page1" data-transition="fade" data-theme="" data-icon="home">
                                 Home
                             </a>
                         </li>
@@ -167,7 +167,7 @@
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
-                            <a href="#page1" data-transition="fade" data-theme="" data-icon="">
+                            <a href="#page1" data-transition="fade" data-theme="" data-icon="home">
                                 Home
                             </a>
                         </li>
@@ -226,7 +226,7 @@
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
-                            <a href="#page1" data-transition="fade" data-theme="" data-icon="">
+                            <a href="#page1" data-transition="fade" data-theme="" data-icon="home">
                                 Home
                             </a>
                         </li>
@@ -283,6 +283,7 @@
                 <h3>
                     Copyright © 2013 Paul Bialo
                 </h3>
+
             </div>
         </div>
 
@@ -293,7 +294,7 @@
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
                         <li>
-                            <a href="#page1" data-transition="fade" data-theme="" data-icon="">
+                            <a href="#page1" data-transition="fade" data-theme="" data-icon="home">
                                 Home
                             </a>
                         </li>
